--- a/libgeotiff/Makefile.am
+++ b/libgeotiff/Makefile.am
@@ -59,6 +59,9 @@ libgeotiff_la_LIBADD = libxtiff/libxtiff.la
 
 lib_LTLIBRARIES = libgeotiff.la
 
+pkgconfig_DATA = libgeotiff.pc
+pkgconfigdir = $(libdir)/pkgconfig
+
 EXTRA_DIST =    autogen.sh \
                 makefile.vc \
                 geo_config.h.vc \
